assets/style.css
:root {
  --accent-color: #474539;
  --link-color: #228b22;
  --text-color: #fffffd;
  --background-color: #fffffd;
}

* {
  box-sizing: border-box;
  font-family: "Space Grotesk" !important;
  src: url("/assets/SpaceGrotesk.ttf") format('truetype'),
       url("/assets/SpaceGrotesk.woff2") format('woff2');
}

.board {
  font-size: 16;
  width: 100%;
  text-align: center;
  margin-bottom: 10px;
}

.header {
  color: var(--accent-color);
  text-align: center;
}

.header h2 {
  font-weight: bold;
  margin: 20px;
  font-size: 3rem;
  color: var(--accent-color);
}

body {
  background-color: var(--text-color);
}

.card-image {
  width: 100%;
}

.button {
  width: fit-content;
  border: 4px solid;
  border-color: var(--link-color);
  border-radius: 4px;
  background-color: var(--link-color);
  color: var(--text-color);
  font-weight: bold;
  padding-left: 10px;
  padding-right: 10px;
}

.card {
  box-sizing: border-box;
  border: 4px solid;
  border-color: var(--accent-color);
  background-color: var(--accent-color);
  display: inline-block;
  margin: 10px;
  margin-bottom: 0px;
  width: 40rem;
  color: var(--text-color);
  font-weight: bold;
  text-align: left;
}

@media only screen and (max-width: 1200px) {
  .card {
    width: calc(100% - 40px);
    margin: 20px;
    margin-bottom: 0px;
    font-size: 1.5rem !important;
  }

  .button {
    font-size: 1.5rem !important;
  }

  .header h2 {
    font-size: 3rem !important;
  }
}

